# Watch-Bot

./: .cursorrules  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  db.py  main.py  models.py  schemas.py
app/api/: admin.py  deps.py  telegram.py
app/pipeline/: adaptation.py  normalization.py
app/publishers/: base.py  stubs.py
app/workers/: celery_app.py  tasks.py
scripts/: demo_scenario.py
src/bot/: __init__.py  main.py
src/bot/config/: settings.py
src/bot/core/: di.py  exceptions.py  http_client.py  logger.py
src/bot/models/: user.py
src/bot/repositories/: base.py  user_repo.py
tests/: conftest.py  test_adaptation.py
tests/bot/: test_main.py
tests/bot/config/: test_settings.py
tests/bot/core/: test_di.py  test_exceptions.py  test_http_client.py  test_logger.py
tests/bot/models/: test_user.py
tests/bot/repositories/: test_user_repo.py
