[tool.poetry]
name = "ai-news-digest-bot"
version = "0.1.0"
description = "AI-powered news digest Telegram bot"
authors = ["Your Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "bot", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
python-telegram-bot = "^22.5"
aiohttp = "^3.10.0"
SQLAlchemy = "^2.0.36"
psycopg = { version = "^3.2.0", extras = ["binary"] }
python-dotenv = "^1.0.1"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.8"
ruff = "^0.6.9"
mypy = "^1.11.2"
black = "^24.8.0"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
src = ["src", "tests"]
select = ["E", "F", "I", "B", "UP", "ASYNC", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
plugins = []

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
